<resources>
    <string name="app_name">hudlup</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="type_your_email_address_below_and_a_password_reset_link_will_be_sent">Type your email address below and a password reset link will be sent.</string>
    <string name="reset_password">Reset Password</string>
    <string name="a_picture_of_someone_sitting_at_a_computer">A picture of someone sitting at a computer</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="lets_get_started_creating_your_hudle_up_profile">Lets get started creating your hudle-up profile!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_str">Email</string>
    <string name="age_18">Age (18+)</string>
    <string name="passwordResetComplete">It you have an account with us, a password reset link has been sent to your inbox</string>
    <string name="confirm_password">Confirm Password</string>
</resources>