<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Password Reset"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/backarrow"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/forgot"
        android:id="@+id/actionImage"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/a_picture_of_someone_sitting_at_a_computer"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/actionImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/para1"
        android:text="@string/forgot_your_password"
        style="@style/Heading1"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:id="@+id/para1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/type_your_email_address_below_and_a_password_reset_link_will_be_sent"
        style="@style/Paragraph1"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/para1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:autofillHints="emailAddress"
        android:id="@+id/emailEditTxt"
        style="@style/editText"
        android:hint="@string/email"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textEmailAddress"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHeight_min="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/primaryBtn"
        android:text="@string/reset_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>