<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg"
    style="@style/noActionBar"
    tools:context=".onboarding.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hudl-"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="86sp"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:shadowDx="-1"
            android:shadowDy="-1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Up"
            android:textColor="@color/Btn_Primary"
            android:textStyle="bold"
            android:textSize="86sp"
            android:shadowRadius="2"
            android:shadowDx="-1"
            android:shadowDy="-1"
            />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/login_bottom_half"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:outlineSpotShadowColor="@color/black"
        android:elevation="2dp"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailEditTxt"
            style="@style/Heading1"
            android:text="Whats Next?"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="75dp"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditTxt"
            android:id="@+id/emailEditTxt"
            style="@style/editText"
            android:hint="@string/email"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintHeight_max="75dp"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/emailEditTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            style="@style/editText"
            android:hint="@string/password"
            android:id="@+id/passwordEditTxt"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_marginTop="10dp"
            app:layout_constraintHeight_max="100dp"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signup_btn"
            style="@style/primaryBtn"
            android:text="@string/login"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_btn"
            android:layout_marginTop="10dp"
            app:layout_constraintHeight_max="100dp"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/divider"

            style="@style/secondaryBtn"
            android:text="@string/sign_up"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/divider"
            android:gravity="center_vertical"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:src="@drawable/horizontal_line"
                />

            <TextView
                android:layout_width="wrap_content"
                style="@style/infoText"
                android:text="Or"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:src="@drawable/horizontal_line"
                />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_max="75dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Continue with Google"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/tertiaryBtn"
            android:drawableLeft= "@drawable/common_google_signin_btn_icon_dark_normal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>